# dep-t-value

./: CHANGELOG.md  README.md  dep-t-value-sqlite.cabal  dep-t-value.cabal
.github/workflows/: haskell-ci.yml
lib/Dep/: Loader.hs  Resource.hs  Value.hs
lib/Dep/Loader/: Dir.hs  FileSystem.hs  Internal.hs  SQLite.hs
lib/Dep/Resource/: Loader.hs
lib/Dep/Value/: Basic.hs  Cached.hs  JSON.hs  Resource.hs  SQLite.hs  Text.hs
test/: tests.hs
test/conf2/Data/Functor/Identity/: Identity.txt
