cabal-version:       3.0

name:                dep-t-value
version:             0.1.0.0
synopsis:            Read resources from data files.
description:         Read resources from data files.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz_carrete@yahoo.com
category:            Control
extra-source-files:  CHANGELOG.md, README.md

source-repository    head
  type:     git
  location: https://github.com/danidiaz/dep-t-value.git

common common
  build-depends:       base >=4.10.0.0 && < 5,
                       transformers ^>= 0.5.0.0,
                       mtl ^>= 2.2,
                       unliftio-core ^>= 0.2.0.0,
                       dep-t ^>= 0.6.1.0,
                       text ^>= 1.2.5.0,
                       bytestring ^>= 0.10.12.0,
                       aeson ^>= 2.0.2.0,
                       split ^>= 0.2.3,
                       filepath ^>= 1.4.2.2,
                       directory >= 1.3.6.0,
  default-language:    Haskell2010

library
  import: common
  exposed-modules:     Dep.Value
                       Dep.Value.Text
                       Dep.Value.JSON
                       Dep.Loader
                       Dep.Loader.Dir
  hs-source-dirs:      lib 

-- test-suite dep-t-test
--   import: common
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             tests.hs
--   build-depends:       
--     dep-t, 
--     rank2classes       ^>= 1.4.1,
--     template-haskell,
--     tasty              >= 1.3.1,
--     tasty-hunit        >= 0.10.0.2,
--     directory
-- 
-- test-suite dep-t-test-curry
--   import: common
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             tests_curry.hs
--   build-depends:       
--     dep-t, 
--     rank2classes       ^>= 1.4.1,
--     template-haskell,
--     tasty              >=  1.3.1,
--     tasty-hunit        >=  0.10.0.2,
--     sop-core           ^>= 0.5.0.0,
-- 
-- test-suite dep-t-test-has
--   import: common
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             tests_has.hs
--   build-depends:       
--     dep-t, 
--     rank2classes       ^>= 1.4.1,
--     template-haskell,
--     tasty              >=  1.3.1,
--     tasty-hunit        >=  0.10.0.2,
--     sop-core           ^>= 0.5.0.0,
--     barbies            ^>= 2.0,
--     containers
-- 
-- test-suite dep-t-test-env
--   import: common
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             tests_env.hs
--   build-depends:       
--     dep-t, 
--     rank2classes       ^>= 1.4.1,
--     template-haskell,
--     tasty              >=  1.3.1,
--     tasty-hunit        >=  0.10.0.2,
--     sop-core           ^>= 0.5.0.0,
--     aeson              ^>= 2.0,
--     bytestring,
--     text,
--     containers
-- 
-- 
-- -- VERY IMPORTANT for doctests to work: https://stackoverflow.com/a/58027909/1364288
-- -- http://hackage.haskell.org/package/cabal-doctest
-- test-suite doctests
--   import:              common
--   ghc-options:         -threaded
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             doctests.hs
--   build-depends:       
--                        dep-t, 
--                        rank2classes       ^>= 1.4.1,
--                        doctest            ^>= 0.18,
-- 
